force-app/main/default/objects/OI_Health_Severity_Descriptor__mdt/OI_Health_Severity_Descriptor__mdt.object-meta.xml
<CustomObject>
    <label>OI Health Severity Descriptor</label>
    <pluralLabel>OI Health Severity Descriptors</pluralLabel>
    <description
  >The severity/score-band registry for Org Health, extending the OI_Node_Type_Descriptor__mdt registry pattern (GraphUI.md §20-21) onto a score-band axis instead of a type-key axis. Resolved once per session, looked up one layer above presentational components (oiHealthSeverityBadge, oiHealthScoreRing never resolve severity themselves), mandatory generic fallback for a score outside every configured band. ADR-0026.</description>
</CustomObject>