force-app/main/default/objects/OI_Health_Severity_Descriptor__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
    <description>User-facing label, e.g. "Warning".</description>
</CustomField>