force-app/main/default/objects/OI_Health_Severity_Descriptor__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <label>Icon Name</label>
    <type>Text</type>
    <length>80</length>
    <description
  >SLDS icon token for this severity, mirroring OI_Node_Type_Descriptor__mdt.Icon_Name__c's convention.</description>
</CustomField>