force-app/main/default/objects/OI_Health_Severity_Descriptor__mdt/fields/Min_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_Score__c</fullName>
    <label>Min Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <required>true</required>
    <description
  >Inclusive lower bound of the score band this severity applies to (0-100 scale).</description>
</CustomField>