force-app/main/default/objects/OI_Health_Severity_Descriptor__mdt/fields/Severity_Key__c.field-meta.xml
<CustomField>
    <fullName>Severity_Key__c</fullName>
    <label>Severity Key</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
    <description
  >Good, Warning, or Critical. Non-severity coverage states (Not Scanned, Not Obtainable) are deliberately NOT represented here — they're rendered by the shared state-banner component, not treated as a fourth severity.</description>
</CustomField>